stateful/alb/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: test.onefirefly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.onefirefly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8083
